2002-08-16  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/mouse.c: Remove false warning when rotating splot by mouse and
	there is a log axis.

2002-08-16  Harald Harders  <h.harders@tu-bs.de>

	* NEWS docs/gnuplot.doc src/gadgets.h src/gadgets.c src/plot2d.c
	src/plot3d.c src/save.c src/set.c src/show.c src/tables.h src/tables.c
	src/unset.c: New option 'set key {no}autotitles'.

2002-08-15  Petr Mikulik  <mikulik@physics.muni.cz>

	* docs/gnuplot.doc term/post.trm: Added some hyperlinks.

2002-08-15  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm: Documentation about Symbol-Oblique.

2002-08-14  Harald Harders  <h.harders@tu-bs.de>

	* src/readline.c: Remove compiler warning.

	* term/post.trm: Fix writing an error message to gpoutfile instead of
	stderr.

2002-08-01  Ethan Merritt  <merritt@u.washington.edu>

	* term/next.trm (NEXT_put_text): Fix incorrect multiplication of
 	text rotation angle by 90 degrees

	* term/openstep.trm (NEXT_put_text): Dito.

	* term/post.trm (ENHPS_put_text): Dito.

	* term/rgip.trm (RGIP_put_text): Dito.

2002-08-01  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* term/README: Updated documentation of _fillbox() terminal entry
 	previously incorrectly referred to as _boxfill().  Mention usage
 	by "with filledboxes".
	
	* src/interpol.c (cp_implode): Introduced special handling for
 	former zeroes on log axes, now represented by type==OUTRANGE,
 	value==-VERYLARGE. Avoid SIGFPE crash on Alpha.

2002-08-01  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Fix buggy test if current plot style
 	is FILLEDCURVES.

	* src/set.c (set_style): Dito.

2002-07-26  Ethan Merritt  <merritt@u.washington.edu>

	* NEWS docs/gnuplot.doc demo/all.dem demo/textrotate.dem
 	src/bitmap.c src/color.c src/gadgets.h src/gplt_x11.c
 	src/graph3d.c src/graphics.c src/save.c src/set.c src/show.c
 	src/term.c term/README term/cgm.trm term/dxf.trm term/dxy.trm